<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C232757E"
    tools:context=".Registro">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="44dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="35dp"
        android:text="Registro" />

    <EditText
        android:id="@+id/nome_res"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/nome_res"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="" />

    <EditText
        android:id="@+id/apelido_res"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/apelido_res"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/email_res"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/email_res"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/masculino_rad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Masculino" />

            <RadioButton
                android:id="@+id/femino_rad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="Feminino" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/morada_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/morada"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/registrarbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#56F61A"
            android:text="Registrar" />

        <Button
            android:id="@+id/listarbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#56F61A"
            android:layout_marginLeft="145dp"
            android:text="Listar" />


    </LinearLayout>


</LinearLayout>