<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C232757E"
    tools:context=".Cadastrar">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="44dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="35dp"
        android:text="Cadastro para Login" />

    <EditText
        android:id="@+id/nome_ed"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/nome_ed"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="" />

    <EditText
        android:id="@+id/password_ed"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/password_ed"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordconfirm_ed"
        style="@style/Style01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:ems="10"
        android:hint="@string/passwordconfirm_ed"
        android:inputType="textPassword"
        android:minHeight="48dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cadastrar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#56F61A"
            android:text="Cadastrar" />

        <Button
            android:id="@+id/limpar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#56F61A"
            android:layout_marginLeft="145dp"
            android:text="Limpar" />


    </LinearLayout>

    <TextView
        android:id="@+id/telaprincipal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="Voltar a tela principal de Login!" />

</LinearLayout>